--- a/reader.css
+++ b/reader.css
@@ -163,7 +163,8 @@ th {
 .dcf-w-100\% {
   width: 100%!important;
 		}
-
+</style>
+<style>
 
         body {
             font-family: "Lato", sans-serif;
@@ -203,9 +204,9 @@ th {
 
 
 
+</style>
 
-
-
+<style>
 
           .GeneratedMarquee {
             font-family:'Comic Sans MS';
@@ -219,9 +220,9 @@ th {
 
 
 
+</style>
 
-
-
+<style>
 
             footer {
                 background: #f44336;
